progressing-security-1.2.7 XssFilter_and_some_optimize